# orblib

./: CMakeLists.txt  Config.cmake.in  LICENSE  readme.md
include/orb/: assert.hpp  box.hpp  compiler.hpp  dynlib.hpp  eval.hpp  exception.hpp  files.hpp  flux.hpp  flux_raw.hpp  platform.hpp  print.hpp  print_time.hpp  result.hpp  time.hpp  utility.hpp
include/orb/fmt/: args.h  base.h  chrono.h  color.h  compile.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
install/include/orb/: box.hpp  platform.hpp  result.hpp
install/include/orb/fmt/: args.h  chrono.h  compile.h  os.h  ostream.h
install/lib/: orblib.lib
install/lib/cmake/orblib/: orblibConfig.cmake  orblibTargets-release.cmake  orblibTargets.cmake
samples/: CMakeLists.txt
samples/assert/: CMakeLists.txt  main.cpp
samples/box/: CMakeLists.txt  main.cpp
samples/compiler/: CMakeLists.txt  main.cpp
samples/dynlib/: CMakeLists.txt  main.cpp  testlib.cpp  testlib.hpp
samples/files/: CMakeLists.txt  main.cpp
samples/flux/: CMakeLists.txt  main.cpp
samples/print/: CMakeLists.txt  main.cpp
samples/result/: CMakeLists.txt  main.cpp
src/: dynlib.cpp  dynlib_unix.cpp  dynlib_windows.cpp  files.cpp  files_unix.cpp  files_windows.cpp  format.cpp
