add_executable(sample_box      box/main.cpp)
add_executable(sample_print    print/main.cpp)
add_executable(sample_files    files/main.cpp)
add_executable(sample_result   result/main.cpp)
add_executable(sample_assert   assert/main.cpp)
add_executable(sample_compiler compiler/main.cpp)

target_link_libraries(sample_box      PRIVATE orb::orblib SYSTEM)
target_link_libraries(sample_print    PRIVATE orb::orblib SYSTEM)
target_link_libraries(sample_files    PRIVATE orb::orblib SYSTEM)
target_link_libraries(sample_result   PRIVATE orb::orblib SYSTEM)
target_link_libraries(sample_assert   PRIVATE orb::orblib SYSTEM)
target_link_libraries(sample_compiler PRIVATE orb::orblib SYSTEM)
